# redis_cli_win

./: CMakeLists.txt  README.md
hiredis/lib/: hiredis.lib
include/: redis_cli_win.h
src/: example.cpp
